--- a/appengine/bower/views/index.pug
+++ b/appengine/bower/views/index.pug
@@ -1,4 +1,4 @@
-// Copyright 2015-2016, Google, Inc.
+// Copyright 2016, Google, Inc.
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
@@ -23,4 +23,4 @@ html
     p Using <span id="module-name"></span>, installed via Bower.
     script(type='text/javascript').
       $('#module-name').text('jquery')
-     
+
